# chat-app

./: .gitignore  README.md  pyproject.toml
chatBot/: auth.py  db.py  test.py  tmp.py
chatBot/backend/: prompt_template.py
chatBot/ui_components/: home_page.py
genai/chatBot/: test.py
